this is the second commit on this branch but i think 3rd overall, edited the html and css code to show the skeleton structure

--- a/global_consult/index.html
+++ b/global_consult/index.html
@@ -19,9 +19,54 @@
 		</nav>
 	</header>
 	<div id="bgimg">
+		<img id="bgimg1"src="images/1.jpg" width="" height="">
 		This is to check if this text uses 20% of the remaing space within the div
-		
 	</div>
+	<div id="abouth">
+		This is What We Are About!!
+	</div>
+	<div id="servicesh">
+		Our Services!!
+	</div>
+	<div id="jobsh">
+		Open Postions!!
+	</div>
+	<div id="contacth">
+		Contact Us
+	</div>
+	<footer>
+		<section>
+			<h3><b>Global Consult</b></h3>	
+			<p>
+				<b>+233(0)203846980 / (0)546207983</b><br><br>
+				E18, Manet Palms Estate, East Legon Extension<br>
+				P.O. Box DTD 111, Madina, Accra-Ghana<br>
+				globalconsult.gh@gmail.com
+			</p>
+		</section>
+		<section>
+			<h3><b>Connect with Us</b></h3>
+			<ul id="social">
+				<li><a href="#"><img src="images/facebook.png"></a></li>
+				<li><a href="#"><img src="images/twitter.png"></a></li>
+				<li><a href="#"><img src="images/youtube.png"></a></li>
+				<li><a href="#"><img src="images/linkedin.png"></a></li>
+			</ul>
+		</section>
+		<section>
+			<h3><b>Our Valued Clients</b></h3>
+			<ul>
+				<li>State Insurnace Company Ghana</li>
+				<li>Nyaho Medical Center</li>
+				<li>Krif Ghana Ltd</li>
+				<li>AFB Ghana Ltd</li>
+				<li>Pz Cussons</li>
+			</ul>
+		</section>
+	</footer>
+	<footer class="second">
+		Second footer here..@copyright
+	</footer>
 	
 </body>
 </html>
