I added the service section with the dark background

--- a/global_consult/index.html
+++ b/global_consult/index.html
@@ -36,35 +36,108 @@
 	</nav>
 	<section class="row">
 		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
 
   <!-- Wrapper for slides -->
-  <div id="hero" class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="./images/1.jpg" alt="...">
-      <div class="carousel-caption">
-      Welcome To the Homepage
-      </div>
-    </div>
-    <div class="item">
-      <img src="./images/nkrumah.jpg" alt="...">
-      <div class="carousel-caption">
-        <h1>Founder odf our nation</h1>
-      </div>
-    </div>
-    <div class="item">
-    	<img src="./images/theweb.png" alt="">
-    	<div class="carousel-caption">
-    		<h1>The Big Bad Web</h1>
-    	</div>
-    </div>
-  </div>
-</div
+		  <div id="hero" class="carousel-inner" role="listbox">
+		    <div class="item active">
+		      <img src="./images/1.jpg" alt="...">
+		      <div class="carousel-caption">
+		      Welcome To the Homepage
+		      </div>
+		    </div>
+		    <div class="item">
+		      <img src="./images/nkrumah.jpg" alt="...">
+		      <div class="carousel-caption">
+		        <h1>Founder of our nation</h1>
+		      </div>
+		    </div>
+		    <div class="item">
+		    	<img src="./images/theweb.png" alt="">
+		    	<div class="carousel-caption">
+		    		<h1>The Big Bad Web</h1>
+		    	</div>
+		    </div>
+		  </div>
+		</div>
+	</section>
+	<section class="row servicesh">
+		<div class="col-md-12 service-title">
+			<h1>Our Services</h1>
+			<h3 id="service-slug">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis nostrum ducimus blanditiis illo, eos id quod quidem magnam beatae doloremque!</h3>
+			<div class="container">
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Lorem ipsum dolor sit amet.</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Dolorem excepturi nisi recusandae modi!</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">At sapiente optio sit ipsum!</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Eligendi aspernatur voluptas, nihil corporis.</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Totam minima laborum quisquam, dicta.</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Officia iure vitae voluptatem doloribus.</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Odio, nihil asperiores laudantium ducimus.</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Dolorem cum perferendis in officia.</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Deleniti voluptate labore cum qui.</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Sequi id suscipit, reprehenderit quam.</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Atque perferendis velit, expedita cum.</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Ad accusamus alias quam quis.</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Dolores, iste. Deleniti, officiis, eaque.</h3>
+					</div>
+				</div>
+				<div class="col-md-6 terml-wrap">
+					<div class="terml">
+						<h3 class="terml-header">Nisi voluptatum odio quos, quia.</h3>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</section>
 </div>
 <!-- 	<header>
@@ -86,8 +159,8 @@
 	 -->
 	 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
-	 Latest compiled and minified JavaScript 
-	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> --> 
+	 Latest compiled and minified JavaScript
+	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
 	 <script src="./libs/jquery.js"></script>
 	 <script src="./libs/bootstrap.js"></script>
 </body>
